complete delete exercise.

--- a/retwisj/src/main/resources/messages.properties
+++ b/retwisj/src/main/resources/messages.properties
@@ -23,6 +23,7 @@ wazza=what's happening ?
 itsyou = That's you!
 notFound=User has not been found
 duplicate=is already in use
+delete=Delete
 reply=Reply
 replyto=Reply to
 inreplyto=in reply to
